@@ -6,7 +6,8 @@ c ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
       SUBROUTINE DISORT( NLYR, DTAUC, SSALB, NMOM, PMOM, TEMPER, WVNMLO,
      &                   WVNMHI, USRTAU, NTAU, UTAU, NSTR, USRANG, NUMU,
      &                   UMU, NPHI, PHI, IBCND, FBEAM, UMU0, PHI0,
-     &                   FISOT, LAMBER, ALBEDO, BTEMP, TTEMP, TEMIS,
+c++csz     &                   FISOT, LAMBER, ALBEDO, BTEMP, TTEMP, TEMIS,
+     &                   FISOT, LAMBER, ALBEDO, BTEMP, BEMIS, TTEMP, TEMIS,
      &                   PLANK, ONLYFL, ACCUR, PRNT, HEADER, MAXCLY,
      &                   MAXULV, MAXUMU, MAXPHI, MAXMOM, RFLDIR, RFLDN,
      &                   FLUP, DFDT, UAVG, UU, ALBMED, TRNMED )
@@ -374,8 +375,9 @@ c     .. Scalar Arguments ..
       LOGICAL   LAMBER, ONLYFL, PLANK, USRANG, USRTAU
       INTEGER   IBCND, MAXCLY, MAXMOM, MAXPHI, MAXULV, MAXUMU, NLYR,
      &          NMOM, NPHI, NSTR, NTAU, NUMU
-      REAL      ACCUR, ALBEDO, BTEMP, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
-     &          UMU0, WVNMHI, WVNMLO
+c++csz      REAL      ACCUR, ALBEDO, BTEMP, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
+      REAL      ACCUR, ALBEDO, BTEMP, BEMIS, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
+     &     UMU0, WVNMHI, WVNMLO
 c     ..
 c     .. Array Arguments ..
 
@@ -467,7 +469,8 @@ c                            ** Set input values for self-test.
 c                            ** Be sure SLFTST sets all print flags off.
          COMPAR = .FALSE.
 
-         CALL SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, DELTAM, DTAUC( 1 ),
+c++csz         CALL SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, DELTAM, DTAUC( 1 ),
+         CALL SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, BEMIS, DELTAM, DTAUC( 1 ),
      &                FBEAM, FISOT, IBCND, LAMBER, NLYR, PLANK, NPHI,
      &                NUMU, NSTR, NTAU, ONLYFL, PHI( 1 ), PHI0, NMOM,
      &                PMOM( 0,1 ), PRNT, PRNTU0, SSALB( 1 ), TEMIS,
@@ -507,7 +510,8 @@ c                                ** Check input dimensions and variables
       CALL CHEKIN( NLYR, DTAUC, SSALB, NMOM, PMOM, TEMPER, WVNMLO,
      &             WVNMHI, USRTAU, NTAU, UTAU, NSTR, USRANG,
      &             NUMU, UMU, NPHI, PHI, IBCND, FBEAM, UMU0,
-     &             PHI0, FISOT, LAMBER, ALBEDO, BTEMP, TTEMP,
+c++csz     &             PHI0, FISOT, LAMBER, ALBEDO, BTEMP, TTEMP,
+     &             PHI0, FISOT, LAMBER, ALBEDO, BTEMP, BEMIS, TTEMP,
      &             TEMIS, PLANK, ONLYFL, DELTAM, CORINT, ACCUR,
      &             TAUC, MAXCLY, MAXULV, MAXUMU, MAXPHI, MAXMOM,
      &             MXCLY, MXULV, MXUMU, MXCMU, MXPHI, MXSQT )
@@ -548,7 +552,8 @@ c                                 ** Print input information
      &    CALL PRTINP( NLYR, DTAUC, DTAUCP, SSALB, NMOM, PMOM, TEMPER,
      &                 WVNMLO, WVNMHI, NTAU, UTAU, NSTR, NUMU, UMU,
      &                 NPHI, PHI, IBCND, FBEAM, UMU0, PHI0, FISOT,
-     &                 LAMBER, ALBEDO, BTEMP, TTEMP, TEMIS, DELTAM,
+csz++     &                 LAMBER, ALBEDO, BTEMP, TTEMP, TEMIS, DELTAM,
+     &                 LAMBER, ALBEDO, BTEMP, BEMIS, TTEMP, TEMIS, DELTAM,
      &                 PLANK, ONLYFL, CORINT, ACCUR, FLYR, LYRCUT,
      &                 OPRIM, TAUC, TAUCPR, MAXMOM, PRNT( 5 ) )
 
@@ -576,11 +581,11 @@ c                                   ** Calculate Planck functions
       ELSE
 
          TPLANK = TEMIS*PLKAVG( WVNMLO, WVNMHI, TTEMP )
-c     csz++ 20160513     
+c     csz++ 20160526
 c     Add emissivity of bottom boundary to simulate skyglow stimulated by anthropogenic light
-c     BPLANK =    BEMIS*PLKAVG( WVNMLO, WVNMHI, BTEMP )
-         BPLANK =    PLKAVG( WVNMLO, WVNMHI, BTEMP )
-c     csz-- 20160513     
+c         BPLANK =    PLKAVG( WVNMLO, WVNMHI, BTEMP )
+             BPLANK =    BEMIS*PLKAVG( WVNMLO, WVNMHI, BTEMP )
+c     csz-- 20160526
 
          DO 40 LEV = 0, NLYR
             PKAG( LEV ) = PLKAVG( WVNMLO, WVNMHI, TEMPER( LEV ) )
@@ -872,7 +877,8 @@ c                                    ** Compare test case results with
 c                                    ** correct answers and abort if bad
          COMPAR = .TRUE.
 
-         CALL SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, DELTAM, DTAUC( 1 ),
+c++csz         CALL SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, DELTAM, DTAUC( 1 ),
+         CALL SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, BEMIS, DELTAM, DTAUC( 1 ),
      &                FBEAM, FISOT, IBCND, LAMBER, NLYR, PLANK, NPHI,
      &                NUMU, NSTR, NTAU, ONLYFL, PHI( 1 ), PHI0, NMOM,
      &                PMOM( 0,1 ), PRNT, PRNTU0, SSALB( 1 ), TEMIS,
@@ -4871,7 +4877,8 @@ c ******************************************************************
       SUBROUTINE CHEKIN( NLYR, DTAUC, SSALB, NMOM, PMOM, TEMPER, WVNMLO,
      &                   WVNMHI, USRTAU, NTAU, UTAU, NSTR, USRANG,
      &                   NUMU, UMU, NPHI, PHI, IBCND, FBEAM, UMU0,
-     &                   PHI0, FISOT, LAMBER, ALBEDO, BTEMP, TTEMP,
+c++csz     &                   PHI0, FISOT, LAMBER, ALBEDO, BTEMP, TTEMP,
+     &                   PHI0, FISOT, LAMBER, ALBEDO, BTEMP, BEMIS, TTEMP,
      &                   TEMIS, PLANK, ONLYFL, DELTAM, CORINT, ACCUR,
      &                   TAUC, MAXCLY, MAXULV, MAXUMU, MAXPHI, MAXMOM,
      &                   MXCLY, MXULV, MXUMU, MXCMU, MXPHI, MXSQT )
@@ -4888,7 +4895,8 @@ c     .. Scalar Arguments ..
       INTEGER   IBCND, MAXCLY, MAXMOM, MAXPHI, MAXULV, MAXUMU, MXCLY,
      &          MXCMU, MXPHI, MXSQT, MXULV, MXUMU, NLYR, NMOM, NPHI,
      &          NSTR, NTAU, NUMU
-      REAL      ACCUR, ALBEDO, BTEMP, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
+c++csz      REAL      ACCUR, ALBEDO, BTEMP, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
+      REAL      ACCUR, ALBEDO, BTEMP, BEMIS, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
      &          UMU0, WVNMHI, WVNMLO
 c     ..
 c     .. Array Arguments ..
@@ -5101,6 +5109,9 @@ c dwf--
      &       INPERR = WRTBAD( 'WVNMLO,HI' )
 
          IF( TEMIS.LT.0.0 .OR. TEMIS.GT.1.0 ) INPERR = WRTBAD( 'TEMIS' )
+
+c++csz
+         IF( BEMIS.LT.0.0 .OR. BEMIS.GT.1.0 ) INPERR = WRTBAD( 'BEMIS' )
 
          IF( BTEMP.LT.0.0 ) INPERR = WRTBAD( 'BTEMP' )
 
@@ -5714,7 +5725,8 @@ c     ..
       SUBROUTINE PRTINP( NLYR, DTAUC, DTAUCP, SSALB, NMOM, PMOM, TEMPER,
      &                   WVNMLO, WVNMHI, NTAU, UTAU, NSTR, NUMU, UMU,
      &                   NPHI, PHI, IBCND, FBEAM, UMU0, PHI0, FISOT,
-     &                   LAMBER, ALBEDO, BTEMP, TTEMP, TEMIS, DELTAM,
+c++csz     &                   LAMBER, ALBEDO, BTEMP, TTEMP, TEMIS, DELTAM,
+     &                   LAMBER, ALBEDO, BTEMP, BEMIS, TTEMP, TEMIS, DELTAM,
      &                   PLANK, ONLYFL, CORINT, ACCUR, FLYR, LYRCUT,
      &                   OPRIM, TAUC, TAUCPR, MAXMOM, PRTMOM )
 
@@ -5727,7 +5739,8 @@ c     .. Scalar Arguments ..
 
       LOGICAL   CORINT, DELTAM, LAMBER, LYRCUT, ONLYFL, PLANK, PRTMOM
       INTEGER   IBCND, MAXMOM, NLYR, NMOM, NPHI, NSTR, NTAU, NUMU
-      REAL      ACCUR, ALBEDO, BTEMP, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
+c++csz      REAL      ACCUR, ALBEDO, BTEMP, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
+      REAL      ACCUR, ALBEDO, BTEMP, BEMIS, FBEAM, FISOT, PHI0, TEMIS, TTEMP,
      &          UMU0, WVNMHI, WVNMLO
 c     ..
 c     .. Array Arguments ..
@@ -5776,10 +5789,12 @@ c     ..
          IF( .NOT.LAMBER ) WRITE( *, '(A)' )
      &       '    Bidirectional reflectivity at bottom'
 
-         IF( PLANK ) WRITE( *, '(A,2F14.4,/,A,F10.2,A,F10.2,A,F8.4)' )
+c++csz         IF( PLANK ) WRITE( *, '(A,2F14.4,/,A,F10.2,A,F10.2,A,F8.4)' )
+         IF( PLANK ) WRITE( *, '(A,2F14.4,/,A,F10.2,A,F8.4,A,F10.2,A,F8.4)' )
      &       '    Thermal emission in wavenumber interval :', WVNMLO,
      &       WVNMHI,
      &       '    Bottom temperature =', BTEMP,
+     &       '    Bottom emissivity =', BEMIS,
      &       '    Top temperature =', TTEMP,
      &       '    Top emissivity =', TEMIS
 
@@ -6238,7 +6253,8 @@ c                      ** from A*B because A*B may (over/under)flow
       RETURN
       END
 
-      SUBROUTINE SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, DELTAM, DTAUC,
+c++csz      SUBROUTINE SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, DELTAM, DTAUC,
+      SUBROUTINE SLFTST( CORINT, ACCUR, ALBEDO, BTEMP, BEMIS, DELTAM, DTAUC,
      &                   FBEAM, FISOT, IBCND, LAMBER, NLYR, PLANK, NPHI,
      &                   NUMU, NSTR, NTAU, ONLYFL, PHI, PHI0, NMOM,
      &                   PMOM, PRNT, PRNTU0, SSALB, TEMIS, TEMPER,
@@ -6272,7 +6288,8 @@ c     .. Scalar Arguments ..
       LOGICAL   COMPAR, CORINT, DELTAM, LAMBER, ONLYFL, PLANK, USRANG,
      &          USRTAU
       INTEGER   IBCND, NLYR, NMOM, NPHI, NSTR, NTAU, NUMU
-      REAL      ACCUR, ALBEDO, BTEMP, DTAUC, FBEAM, FISOT, FLUP, PHI,
+c++csz      REAL      ACCUR, ALBEDO, BTEMP, DTAUC, FBEAM, FISOT, FLUP, PHI,
+      REAL      ACCUR, ALBEDO, BTEMP, BEMIS, DTAUC, FBEAM, FISOT, FLUP, PHI,
      &          PHI0, RFLDIR, RFLDN, SSALB, TEMIS, TTEMP, UMU, UMU0,
      &          UTAU, UU, WVNMHI, WVNMLO
 c     ..
@@ -6286,7 +6303,8 @@ c     .. Local Scalars ..
       LOGICAL   CORINS, DELTAS, LAMBES, OK, ONLYFS, PLANKS, USRANS,
      &          USRTAS
       INTEGER   I, IBCNDS, N, NLYRS, NMOMS, NPHIS, NSTRS, NTAUS, NUMUS
-      REAL      ACC, ACCURS, ALBEDS, BTEMPS, DTAUCS, ERROR1, ERROR2,
+c++csz      REAL      ACC, ACCURS, ALBEDS, BTEMPS, DTAUCS, ERROR1, ERROR2,
+      REAL      ACC, ACCURS, ALBEDS, BTEMPS, BEMISS, DTAUCS, ERROR1, ERROR2,
      &          ERROR3, ERROR4, FBEAMS, FISOTS, PHI0S, PHIS, SSALBS,
      &          TEMISS, TTEMPS, UMU0S, UMUS, UTAUS, WVNMHS, WVNMLS
 c     ..
@@ -6347,6 +6365,7 @@ c                                     ** Save user input values
          WVNMLS = WVNMLO
          WVNMHS = WVNMHI
          BTEMPS = BTEMP
+         BEMISS = BEMIS
          TTEMPS = TTEMP
          TEMISS = TEMIS
          TEMPES( 0 ) = TEMPER( 0 )
@@ -6395,6 +6414,7 @@ c                          ** Haze L moments
          WVNMLO = 0.0
          WVNMHI = 50000.
          BTEMP  = 300.0
+         BEMIS  = 1.0
          TTEMP  = 100.0
          TEMIS  = 0.8
          TEMPER( 0 ) = 210.0
@@ -6463,6 +6483,7 @@ c                                      ** Restore user input values
          WVNMLO = WVNMLS
          WVNMHI = WVNMHS
          BTEMP  = BTEMPS
+         BEMIS  = BEMISS
          TTEMP  = TTEMPS
          TEMIS  = TEMISS
          TEMPER( 0 ) = TEMPES( 0 )
