@@ -1,3 +1,7 @@
+2016-05-26  Charlie Zender  <zender@uci.edu>
+
+	* Add bottom surface emissivity BEMIS to DISORT and SWNB2
+
 2016-05-20  Charlie Zender  <zender@uci.edu>
 
 	* Verify everything works when str_nbr=plr_nbr. Yay!
